spade-tests/src/snapshots/spade_tests__ast_lowering__negative_reg_counts_are_disallowed.snap
---
source: spade-tests/src/ast_lowering.rs
---
pipeline(0) x(clk: clock) -> bool {
    reg*-10;
        true
}


error: Pipeline depth mismatch. Expected 0 got -10
  ┌─ testinput:1:35
  │  
1 │   pipeline(0) x(clk: clock) -> bool {
  │            - Type 0 inferred here
  │ ╭───────────────────────────────────^
2 │ │     reg*-10;
3 │ │         true
4 │ │ }
  │ ╰─^ Found -10 stages in this pipeline
  │  
  = note: Expected: -10
               Got: 0
