spade-tests/src/snapshots/spade_tests__ast_lowering__no_mangle_generics.snap
---
source: spade-tests/src/ast_lowering.rs
---
#[no_mangle]
fn mangling_time<#N>() -> int<N> __builtin__


error: int requires either a known wordlength (int<5>) or a range (int<N..M>)
  ┌─ testinput:2:31
  │
2 │ fn mangling_time<#N>() -> int<N> __builtin__
  │                               ^
  │
  = help: Perhaps you ment a generic range with (int<N..M>)?


