spade-tests/src/snapshots/spade_tests__ast_lowering__non_ports_can_not_contain_transitive_ports.snap
---
source: spade-tests/src/ast_lowering.rs
---
struct port P {
    x: &int<32>
}
struct A {
    x: P
}
