spade-tests/src/snapshots/spade_tests__ast_lowering__ports_can_not_impl_functions.snap
---
source: spade-tests/src/ast_lowering.rs
---
struct port A {}

impl A {
    fn test(self) -> bool {true}
}
