spade-tests/src/snapshots/spade_tests__ast_lowering__registers_can_not_be_no_mangle.snap
---
source: spade-tests/src/ast_lowering.rs
---
entity x(clk: clock) -> bool {
    #[no_mangle]
    reg(clk) x = false;
    x
}

error: no_mangle is not a valid attribute for a register
  ┌─ testinput:2:5
  │
2 │     #[no_mangle]
  │     ^^^^^^^^^^^^ Unsupported attribute for a register
